fix testimonial size on small breakpoint

--- a/styles/site.css
+++ b/styles/site.css
@@ -886,6 +886,10 @@
       width: 100%;
     }
 
+    .testimonial {
+      inline-size: 100%;
+    }
+
     header {
       width: 100%;
     }
